@@ -34,6 +34,9 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
       (LP: #923807)
   * apt-pkg/contrib/fileutl.h:
     - fix compat with FileFd::OpenDescriptor() in ReadOnlyGzip mode
+  * apt-pkg/packagemanager.cc:
+    - when calculating pre-dependencies ensure that both unpack and
+      configure are considered (instead of only configure) LP: #927993
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 30 Jan 2012 19:17:09 +0100
 
